WIP: Images + bootstrap styling --> homepage.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,33 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+
     <!--Custom scripts and css-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="public/css/styles.css" />
 
 
 </head>
 <body>
-    <header>
-        <nav>
-            <span>CIVIL RIGHTS CORE</span>
-            <ul>
-                <li>contact</li>
-                <li>team</li>
-                <li>about</li>
-                <li>news</li>
-            </ul>
+<div id="crc-container">
+    <header class="bs-docs-nav navbar navbar-static-top">
+        <div class="container">
+            <!--<div class="col-md-3">-->
+
+                <span class="pull-left"><a href="/">CIVIL RIGHTS CORE</a></span>
+            <!--</div>-->
+            <nav class="collapse navbar-collapse">
+            <!--<div class="col-md-8 col-md-offset-1">-->
+                <ul class="tabs nav navbar-nav">
+                    <li><a>contact</a></li>
+                    <li><a>team</a></li>
+                    <li><a>about</a></li>
+                    <li><a>news</a></li>
+                </ul>
+            </nav>
+            <!--</div>-->
         </nav>
+        </div>
     </header>
     <div class="title">
         <h1>Civil Rights Core</h1>
@@ -38,5 +49,6 @@
     <div class="contact">
         Contact: alec@civilrightscorps.org
     </div>
+</div>
 </body>
 </html>
