--- a/index.html
+++ b/index.html
@@ -14,30 +14,35 @@
 </head>
 <body>
 <div id="crc-container">
-    <header class="bs-docs-nav navbar navbar-static-top">
-        <div class="container">
-            <!--<div class="col-md-3">-->
+    <header>
+        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
 
-                <span class="pull-left"><a href="/">CIVIL RIGHTS CORE</a></span>
-            <!--</div>-->
-            <nav class="collapse navbar-collapse">
-            <!--<div class="col-md-8 col-md-offset-1">-->
-                <ul class="tabs nav navbar-nav">
-                    <li><a>contact</a></li>
-                    <li><a>team</a></li>
-                    <li><a>about</a></li>
-                    <li><a>news</a></li>
-                </ul>
-            </nav>
-            <!--</div>-->
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.php">Contact</a></li>
+                        <li><a href="about.php">Team</a></li>
+                        <li><a href="#portfolio">About</a></li>
+                        <li><a href="#">News</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        </div>
     </header>
-    <div class="title">
-        <h1>Civil Rights Core</h1>
+    <div class="title container">
+        <h1>Civil Rights Corps</h1>
     </div>
-    <div class="description">
-        <div>
+    <div class="description container">
+        <div class="paragraph-container">
             <p>
                 Civil Rights Corps is a new non-profit organization dedicated to challenging systemic injustices in the American criminal legal system.  The organization works with criminal defendants, inmates, family members, communities, formerly incarcerated people, advocates, judges, and government officials to end human caging and to create a legal system that promotes equality and human flourishing.  Civil Rights Corps engages in advocacy and public education and brings innovative, systemic civil rights litigation to help resensitize the legal system and our culture to the injustices and brutality that characterize the contemporary American criminal system.
             </p>
@@ -46,8 +51,8 @@
             </p>
         </div>
     </div>
-    <div class="contact">
-        Contact: alec@civilrightscorps.org
+    <div class="contact container">
+        <h2>Contact: alec@civilrightscorps.org</h2>
     </div>
 </div>
 </body>
