Sections and styling

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
     </header>
     <div class="title container">
         <h1>Civil Rights Corps</h1>
+        <div class="stars">&star;&star;&star;</div>
     </div>
-    <div class="description container">
+    <div class="mission container">
+        <h2 class=>mission</h2>
+        <hr>
         <div class="paragraph-container">
             <p>
                 Civil Rights Corps is a new non-profit organization dedicated to challenging systemic injustices in the American criminal legal system.  The organization works with criminal defendants, inmates, family members, communities, formerly incarcerated people, advocates, judges, and government officials to end human caging and to create a legal system that promotes equality and human flourishing.  Civil Rights Corps engages in advocacy and public education and brings innovative, systemic civil rights litigation to help resensitize the legal system and our culture to the injustices and brutality that characterize the contemporary American criminal system.
@@ -51,8 +54,25 @@
             </p>
         </div>
     </div>
+    <div class="mailing-list container">
+        <h2>mailing list:</h2>
+        <hr />
+        <label>Enter your email</label>
+        <input type="email" />
+    </div>
+    <div class="staff container">
+        <h2>meet our staff</h2>
+        <hr />
+    </div>
     <div class="contact container">
-        <h2>Contact: alec@civilrightscorps.org</h2>
+        <h2>contact</h2>
+        <hr>
+        alec@civilrightscorps.org
+    </div>
+    <div class="donate container">
+        <h2>donate</h2>
+        <hr>
+        
     </div>
 </div>
 </body>
