--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
 
 </head>
 <body>
-<div id="crc-container">
-    <header>
-        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
+<div id="crc-container container">
+<div id="row">
+<div id="content">
+    <!--<header>-->
+        <!--<nav class="navbar navbar-inverse navbar-static-top" role="navigation">-->
+            <!--<div class="container">-->
+                <!--<div class="navbar-header">-->
+                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
+                        <!--<span class="sr-only">Toggle navigation</span>-->
+                        <!--<span class="icon-bar"></span>-->
+                        <!--<span class="icon-bar"></span>-->
+                        <!--<span class="icon-bar"></span>-->
+                    <!--</button>-->
+                <!--</div>-->
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.php">Contact</a></li>
-                        <li><a href="about.php">Team</a></li>
-                        <li><a href="#portfolio">About</a></li>
-                        <li><a href="#">News</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+                <!--&lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;-->
+                <!--<div class="collapse navbar-collapse">-->
+                    <!--<ul class="nav navbar-nav navbar-right">-->
+                        <!--<li><a href="index.php">Contact</a></li>-->
+                        <!--<li><a href="about.php">Team</a></li>-->
+                        <!--<li><a href="#portfolio">About</a></li>-->
+                        <!--<li><a href="#">News</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</nav>-->
+    <!--</header>-->
+
     <div class="title container">
         <h1>Civil Rights Corps</h1>
         <div class="stars">&star;&star;&star;</div>
@@ -49,31 +52,46 @@
             <p>
                 Civil Rights Corps is a new non-profit organization dedicated to challenging systemic injustices in the American criminal legal system.  The organization works with criminal defendants, inmates, family members, communities, formerly incarcerated people, advocates, judges, and government officials to end human caging and to create a legal system that promotes equality and human flourishing.  Civil Rights Corps engages in advocacy and public education and brings innovative, systemic civil rights litigation to help resensitize the legal system and our culture to the injustices and brutality that characterize the contemporary American criminal system.
             </p>
-            <p>
-                New website coming soon.
-            </p>
+
         </div>
     </div>
     <div class="mailing-list container">
-        <h2>mailing list:</h2>
-        <hr />
-        <label>Enter your email</label>
-        <input type="email" />
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+            <form action="//civilrightscorps.us14.list-manage.com/subscribe/post?u=1c2b18772807d9227b885e3ef&amp;id=12133e7ed4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <label for="mce-EMAIL">Subscribe to our mailing list</label>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1c2b18772807d9227b885e3ef_12133e7ed4" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+        </div>
+
+        <!--End mc_embed_signup-->
     </div>
-    <div class="staff container">
-        <h2>meet our staff</h2>
-        <hr />
-    </div>
+
     <div class="contact container">
         <h2>contact</h2>
         <hr>
         alec@civilrightscorps.org
     </div>
-    <div class="donate container">
-        <h2>donate</h2>
-        <hr>
-        
+
+
+    <div class="container coming-soon">
+        <hr />
+        <h4>new website coming soon</h4>
     </div>
+
+</div>
+</div>
 </div>
 </body>
 </html>
