Improve email experience

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="contact container">
         <h2>contact</h2>
         <hr>
-        alec@civilrightscorps.org
+        <a href="mailto:alec@civilrightscorps.org">alec@civilrightscorps.org</a>
     </div>
 
 
